# rocket-test

./: .env  .gitignore  Cargo.toml  Readme.md  Rocket.toml  generate-schema.sh  watch.sh
migrations/2017-06-20-232250_create_posts/: up.sql
migrations/2017-09-02-005338_create_categories/: down.sql
migrations/2017-11-18-022459_create_periods/: down.sql  up.sql
migrations/20170902005338_create_categories/: up.sql
migrations/2018-02-04-004209_transactions_table/: down.sql  up.sql
migrations/2018-02-04-021220_drop_posts/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/controllers/: category.rs  context.rs  mod.rs  period.rs  post.rs  transaction.rs
src/models/: category.rs  crud.rs  mod.rs  period.rs  post.rs  transaction.rs  validate.rs
src/models/transaction/: mod.rs  new_transaction.rs  transaction.rs  transaction_form.rs
src/schema/: db_schema.rs  mod.rs
src/util/: crud.rs  errors.rs  mod.rs  response.rs  time.rs
src/views/: transaction.rs
templates/: edit_post.html.hbs  error.html.hbs  index.html.hbs  layout.html  layout.html.hbs
templates/category/: edit.html.hbs  index.html.hbs
templates/period/: edit.html.hbs  index.html.hbs  view.html.hbs
templates/post/: edit.html.hbs  index.html.hbs  view.html.hbs
templates/transaction/: edit.html.hbs  index.html  index.html.hbs
