[package]
authors = ["am0d"]
name = "rocket-test"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
log = "0.3.8"
markdown = "0.2.0"
r2d2 = "0.7.3"
r2d2-diesel = "0.15.0"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

[dependencies.clippy]
optional = true
version = "0.0.152"

[dependencies.diesel]
features = ["postgres"]
version = "0.15.2"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.15.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.3.2"
