[package]
authors = ["am0d"]
name = "rocket-test"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.3.8"
markdown = "0.2.0"
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
serde = "1.0.20"
serde_derive = "1.0.20"
serde_json = "1.0.6"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.clippy]
optional = true
version = "0.0.170"

[dependencies.diesel]
features = [
    "postgres",
    "chrono",
]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.3.3"
