[package]
authors = ["am0d"]
name = "rocket-test"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4.1"
markdown = "0.2.0"
rocket = "0.4"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"

[dependencies.askama]
version = "0.8.0"
features = ["with-rocket"]

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.clippy]
optional = true
version = "0.0.181"

[dependencies.diesel]
features = [
    "postgres",
    "chrono",
    "r2d2",
]
version = "~1.1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates"]
version = "0.4"
